# meetup-notifier

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
src/meetup_notifier/: __init__.py  meetup.py
tests/: test_meetup.py
tests/fixtures/: event.html  group_events.html  online_event.html
